[gd_scene load_steps=6 format=2]

[ext_resource path="res://Joueur/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/grass.png" type="Texture" id=2]
[ext_resource path="res://PRINCIPAL/PRINCIPAL.gd" type="Script" id=3]
[ext_resource path="res://COINS/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://MENU/CanvasLayer.tscn" type="PackedScene" id=5]

[node name="PRINCIPAL" type="Node2D"]
script = ExtResource( 3 )
coin = ExtResource( 4 )
playtime = 30

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 478.0
margin_bottom = 721.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinContainer" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 81, 79 )

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="CanvasLayer" to="." method="_on_CanvasLayer_start_game"]
